# Lumiax

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/levels/: level1.json  tilemap1.json
src/: debugRenderer.cpp  debugRenderer.hpp  level.cpp  level.hpp  levelParser.cpp  levelParser.hpp  levelRenderer.cpp  levelRenderer.hpp  main.cpp  ship.cpp  ship.hpp  shipRenderer.cpp  shipRenderer.hpp  types.hpp
